// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FooterNavHeader component renders default footer correctly 1`] = `
<h4
  aria-label="ABCD"
  className="footer-nav-header1"
  data-locator="col_heading_undefined"
>
  Title
</h4>
`;

exports[`FooterNavHeader component renders image in header variation correctly 1`] = `
<Styled(Anchor)
  className="footer-nav-header img-link"
  data-locator="col_heading_undefined"
  to=""
>
  <Styled(Image) />
</Styled(Anchor)>
`;

exports[`FooterNavHeader component renders subheader variation correctly 1`] = `
<h4
  aria-label="ABCD"
  className="footer-nav-header2 subHeader"
  data-locator="col_heading_undefined"
>
  Title
</h4>
`;
